tests/ui/asm/may_unwind_ffi_unwind.stderr
error: call to inline assembly that may unwind
  --> $DIR/may_unwind_ffi_unwind.rs:14:5
   |
LL |     asm!("", options(may_unwind));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to inline assembly that may unwind
   |
note: the lint level is defined here
  --> $DIR/may_unwind_ffi_unwind.rs:8:9
   |
LL | #![deny(ffi_unwind_calls)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

